--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -216,6 +216,98 @@ p {
 #tequila .card .card-title {
     font-size: 2.2rem;
 }
+#clients{
+    height: 67rem;
+    background-image: url(../images/bg_4.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+}
+.background-div{
+    height: 67rem;
+    background-color: #080808bd;
+    text-align: center;
+    padding-top: 10rem;
+}
+.background-div .clients-text{
+    margin-bottom: 10rem;
+}
+.background-div .clients-text h1{
+    font-size: 4rem;
+    color: #fff;
+}
+.background-div .clients-text p{
+    font-size: 1.6rem;
+    font-style: italic;
+}
+.background-div .card{
+    width: 35rem;
+    height: 20rem;
+    background: none;
+    border: 1px solid gray;
+    padding: 1.5rem;
+    display: flex;
+    position: relative;
+}
+.background-div .card .card-title{
+    width: 31rem;
+    text-align: left;
+ }
+.background-div .card .card-title p{
+   font-size: 1.6rem;  
+   font-style: italic;
+}
+.background-div .card .card-text{
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+}
+.background-div .card .card-text .image{
+    width: 8rem;
+    height: 8rem;
+}
+.background-div .card .card-text .image img{
+    width: 8rem;
+    height: 8rem;
+    border-radius: 100%;
+}
+.background-div .card .card-text .image-text{
+   text-align: left;
+}
+.background-div .card .card-text .image-text h3{
+    font-size: 2rem;
+    color: #fff;
+}
+.background-div .card .card-text .image-text p{
+    font-size: 1.6rem;
+}
+.pagination{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 4rem;
+    gap: 1rem;
+}
+.pagination .circle{
+    width: 1.4rem;
+    height: 1.4rem;
+    border-radius: 100%;
+    border: 1px solid #ffffff99;
+}
+.quote{
+    width: 4rem;
+    height: 4rem;
+    background-color: #B7472A;
+    position: absolute;
+    bottom: 18rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+}
+.quote i{
+   font-size: 2.5rem;
+   color: #fff;
+}
 @media(max-width:768px) {
     #header_area {
         height: 6rem;
@@ -271,5 +363,11 @@ p {
     }
     #tequila {
         height: 135rem;
+    }
+    #clients{
+        height: 97rem;
+    }
+    .background-div{
+        height: 97rem;
     }
 }
