--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -522,6 +522,50 @@ p {
     color: #B7472A;
     font-weight: bold;
 }
+#footer_area{
+    height: 40rem;
+    background-color: #1a1a1a;
+    display: flex;
+    align-items: center;
+}
+.footer-boxs{
+    display: flex;
+    gap: 7rem;
+}
+.footer-boxs .box1{
+    width: 20rem;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+}
+.footer-boxs .box2,.box3,.box4,.box5{
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+}
+.footer-boxs .box1 p{
+    font-size: 1.6rem;
+}
+.footer-boxs .box2 ul{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+.footer-boxs .box3 ul{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+.footer-boxs .box4 ul{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+.footer-boxs .box5 ul{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
 @media(max-width:768px) {
     #header_area {
         height: 6rem;
