--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
     padding-top: .7rem;
     position: fixed;
     left: 0;
+    top: 0;
     right: 0;
     z-index: 1;
 }
@@ -69,6 +70,7 @@ p {
     align-items: center;
     position: fixed;
     right: 0;
+    top: 0;
     left: 0;
     margin-top: 3rem;
     z-index: 1;
@@ -538,6 +540,26 @@ p {
     flex-direction: column;
     gap: 3rem;
 }
+.footer-boxs .box1 h1{
+    font-size: 2rem;
+    color: gray;
+}
+.footer-boxs .box2 h1{
+    font-size: 2rem;
+    color: gray;
+}
+.footer-boxs .box3 h1{
+    font-size: 2rem;
+    color: gray;
+}
+.footer-boxs .box4 h1{
+    font-size: 2rem;
+    color: gray;
+}
+.footer-boxs .box5 h1{
+    font-size: 2rem;
+    color: gray;
+}
 .footer-boxs .box2,.box3,.box4,.box5{
     display: flex;
     flex-direction: column;
@@ -546,6 +568,49 @@ p {
 .footer-boxs .box1 p{
     font-size: 1.6rem;
 }
+.footer-boxs .box1 .footer-social{
+    display: flex;
+    gap: 2rem;
+}
+.footer-boxs .box1 .footer-social .social1{
+   width: 5rem;
+   height: 5rem;
+   background-color: #B7472A;
+   border-radius: 100%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+.footer-boxs .box1 .footer-social .social1 i{
+   color: #fff;
+   font-size: 2rem;
+ }
+ .footer-boxs .box1 .footer-social .social2{
+    width: 5rem;
+    height: 5rem;
+    background-color: #B7472A;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+ }
+ .footer-boxs .box1 .footer-social .social2 i{
+    color: #fff;
+    font-size: 2rem;
+  }
+  .footer-boxs .box1 .footer-social .social3{
+    width: 5rem;
+    height: 5rem;
+    background-color: #B7472A;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+ }
+ .footer-boxs .box1 .footer-social .social3 i{
+    color: #fff;
+    font-size: 2rem;
+  }
 .footer-boxs .box2 ul{
     display: flex;
     flex-direction: column;
@@ -566,6 +631,59 @@ p {
     flex-direction: column;
     gap: 2rem;
 }
+.footer-boxs .box2 ul li a{
+   color:gray;
+   font-size: 1.6rem;
+}
+.footer-boxs .box3 ul li a{
+    color:gray;
+   font-size: 1.6rem;
+}
+.footer-boxs .box4 ul li a{
+    color:gray;
+    font-size: 1.6rem;
+}
+.footer-boxs .box5{
+    width: 22.8rem;
+}
+.footer-boxs .box5 ul li a{
+    color:gray;
+   font-size: 1.6rem;
+}
+.footer-boxs .box5 .map{
+    display: flex;
+    gap: 2rem;
+}
+.footer-boxs .box5 .map i{
+   font-size: 2rem;
+   color: gray;
+}
+.footer-boxs .box5 .telephone{
+    display: flex;
+    gap: 2rem;
+}
+.footer-boxs .box5 .telephone i{
+    font-size: 2rem;
+    color: gray;
+ }
+.footer-boxs .box5 .send{
+    display: flex;
+    gap: 2rem;
+}
+.footer-boxs .box5 .send i{
+    font-size: 2rem;
+    color: gray;
+ }
+ #copyright{
+    height: 12.4rem;
+    background-color: #000;
+    display: flex;
+    align-items: center;
+ }
+ #copyright span{
+    font-size: 1.6rem;
+    color: gray;
+ }
 @media(max-width:768px) {
     #header_area {
         height: 6rem;
@@ -647,4 +765,18 @@ p {
     .background-div{
         height: 97rem;
     }
+    #recent .card .image{
+        width: 60rem;
+        height: 37rem;
+    }
+    #footer_area{
+        height: 120rem;
+        margin-top: 80rem;
+    }
+    .footer-boxs{
+        display: block;
+    }
+    #copyright span{
+        font-size: 1.3rem;
+     }
 }
